frontend/test/should_fail/index_pattern_multiple_edge_fromto_two_lower_bounds2.grg
#using "index_multiple_model.gm"

rule i {
	-e:E{multiple(Ei >= 42, Ei <= 44, E1j >= 0, E1j >= 1)}->;
	
	modify {
	}
}
